fixed gap issue in home component

--- a/src/app/components/core/home/home.component.css
+++ b/src/app/components/core/home/home.component.css
@@ -4,6 +4,10 @@
   margin: 0 auto 0 auto;
 }
 
+.card-container{
+  margin-bottom: 16px;
+}
+
 .title-material-icons{
   font-size: 300%;
 }
